<resources>
    <string name="app_name">CryptoWidget</string>
    <string name="widget_name">Crypto Widget</string>
    <string name="widget_text">Text in widget</string>
    <string name="t_price">Price</string>
    <string name="t_change">24h</string>
    <string name="t_update">Update</string>
    <string name="hint_crInput">enter the currency unit</string>
    <string name="radio_color">Background</string>
    <string name="t_updtime">Update frequency (minutes)</string>
    <string name="notice_tupd">Frequent updates increase battery discharge</string>
    <string name="notice_internet">No internet connection available</string>
    <string name="notice_fail_conn_1">Connection timeout. Trying to reconnect ...</string>
    <string name="notice_fail_conn_2">Could not connect to the remote host. Inform the development team.</string>
    <string name="notice_fail_get">server status: </string>
    <string name="notice_fail_load_sp">CryproWidget: Error passing custom parameters. Missing values will be assumed by default.</string>
    <string name="notice_name">Enter the name of the currency!</string>
    <string name="notice_failed">Failed to retrieve data</string>
    <string name="notice_error">Unknown error</string>
    <string name="notice_timeout">Response time exceeded</string>
    <string name="btn_ok">OK</string>
    <string name="t_a">Alpha:\u0020</string>
    <string name="t_r">Red:\u0020\u0020\u0020\u0020</string>
    <string name="t_g">Green:</string>
    <string name="t_b">Blue:\u0020\u0020\u0020</string>
    <string name="currency1">Currency 1</string>
    <string name="currency2">Currency 2</string>
    <string name="compar_cur">Comparable currency</string>
    <string name="strategy">Data provider:</string>
    <string-array name="coingecko_prices_list">
        <item>aed</item>
        <item>ars</item>
        <item>aud</item>
        <item>bch</item>
        <item>bdt</item>
        <item>bhd</item>
        <item>bmd</item>
        <item>brl</item>
        <item>btc</item>
        <item>cad</item>
        <item>chf</item>
        <item>clp</item>
        <item>cny</item>
        <item>czk</item>
        <item>dkk</item>
        <item>eth</item>
        <item>eur</item>
        <item>gbp</item>
        <item>hkd</item>
        <item>huf</item>
        <item>idr</item>
        <item>ils</item>
        <item>inr</item>
        <item>jpy</item>
        <item>krw</item>
        <item>kwd</item>
        <item>lkr</item>
        <item>ltc</item>
        <item>mmk</item>
        <item>mxn</item>
        <item>myr</item>
        <item>nok</item>
        <item>nzd</item>
        <item>php</item>
        <item>pkr</item>
        <item>pln</item>
        <item>rub</item>
        <item>sar</item>
        <item>sek</item>
        <item>sgd</item>
        <item>thb</item>
        <item>try</item>
        <item>twd</item>
        <item>usd</item>
        <item>vef</item>
        <item>xag</item>
        <item>xau</item>
        <item>xdr</item>
        <item>zar</item>
    </string-array>
    <string-array name="coinmarketcap_prices_list">
        <item>USD</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>TWD</item>
        <item>ZAR</item>
    </string-array>
    <string-array name="strategy_list">
        <item>coingecko.com</item>
        <item>coinmarketcap.com (beta)</item>
    </string-array>
</resources>
