<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    >
    <AutoCompleteTextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_crInput"
        android:layout_marginBottom="@dimen/margin_columns"
        android:textSize="@dimen/in_size"

        android:completionThreshold="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:prompt="@string/currency1"
            />

        <TextView
            android:id="@+id/divider"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textSize="13sp"/>


        <Spinner
            android:id="@+id/spinner2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:prompt="@string/currency2"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t_updtime"
            android:textSize="@dimen/text_size_config"

            />

        <TextView
            android:id="@+id/valTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5"
            android:textSize="@dimen/text_size_config"/>

        <SeekBar
            android:id="@+id/seekBar_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:progress="5"
            android:max="30"
            android:min="3"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_config_small"
        android:textColor="#4e000000"
        android:gravity="end"
        android:layout_marginBottom="@dimen/margin_columns"


        android:text="@string/notice_tupd" />

    <Switch
        android:id="@+id/background_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_color"
        android:layout_marginBottom="@dimen/margin_columns"
        android:layout_marginLeft="@dimen/margin_columns"
        android:layout_marginTop="12dp"
        android:checked="true"
        android:textSize="@dimen/text_size_config"
        />


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_columns"
        android:background="#000">


    </FrameLayout>

    <LinearLayout
        android:id="@+id/relative4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_element"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_config"
            android:text="@string/t_a" />

        <TextView
            android:id="@+id/valAlpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="250"
            android:textSize="@dimen/text_size_config"


            />

        <SeekBar
            android:id="@+id/seekBar_Alpha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:progress="250"


            android:max="250" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_element"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_config"


            android:text="@string/t_r" />

        <TextView
            android:id="@+id/valR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="@dimen/text_size_config"


            android:layout_weight="2"/>


        <SeekBar
            android:id="@+id/seekBar_R"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"


            android:layout_weight="10"

            android:max="250"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_element"
            android:layout_weight="1"
            android:text="@string/t_g"
            android:textSize="@dimen/text_size_config"/>

        <TextView
            android:id="@+id/valG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_weight="2"
            android:textSize="@dimen/text_size_config"

            />

        <SeekBar
            android:id="@+id/seekBar_G"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"



            android:max="250"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/relative3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_element"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_config"

            android:text="@string/t_b" />

        <TextView
            android:id="@+id/valB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_weight="2"
            android:textSize="@dimen/text_size_config"


            />

        <SeekBar
            android:id="@+id/seekBar_B"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"


            android:max="250"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_ok"
        android:textSize="@dimen/text_size_config"
        android:onClick="onClick"/>



</LinearLayout>