<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/general"
    android:background="@drawable/back"


    >

    <ImageView
        android:id="@+id/ico"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"

        android:layout_marginRight="@dimen/margin_element"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ico"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:text="name"
        android:textColor="@color/color_name"
        android:textSize="@dimen/name_size"/>
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/tv_dyn_Dol"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginRight="@dimen/margin_element"
        android:textColor="@color/color_def"
        android:text="@string/t_price"/>

    <TextView
        android:id="@+id/tv_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin_columns"
        android:layout_toLeftOf="@+id/button"
        android:textColor="@color/color_def"

        android:text="@string/t_change"/>

    <Button
        android:id="@+id/button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/margin_element"
        android:text="@string/t_update"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_btn"


        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignRight="@id/button"
        android:visibility="invisible"
        android:indeterminateTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/tv_priceDol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_element"
        android:layout_marginBottom="@dimen/margin"
        android:layout_below="@+id/tv_price"
        android:layout_toLeftOf="@+id/tv_dyn_Dol"
        android:text=""
        android:textColor="@color/color_price"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/tv_priceBTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_element"
        android:layout_below="@+id/tv_priceDol"
        android:layout_toLeftOf="@id/tv_dyn_Dol"
        android:text=""
        android:textColor="@color/color_price"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/tv_dyn_Dol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_toLeftOf="@+id/button"
        android:layout_below="@+id/tv_change"
        android:text=""
        android:textColor="@color/color_dyn"
        android:textSize="@dimen/text_size"
        android:minWidth="25dp"/>

    <TextView
        android:id="@+id/tv_dyn_BTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/button"
        android:layout_below="@+id/tv_dyn_Dol"
        android:text=""
        android:textColor="@color/color_dyn"
        android:textSize="@dimen/text_size"
        android:minWidth="25dp"/>
</RelativeLayout>